[gd_scene load_steps=4 format=3 uid="uid://cqbf2c3ju44tm"]

[ext_resource type="Texture2D" uid="uid://8fohdjkfsy2j" path="res://assets/ui/black-square-png-2.png" id="1_p1hv4"]
[ext_resource type="Script" path="res://ending_story.gd" id="2_ob6i7"]

[sub_resource type="LabelSettings" id="LabelSettings_boktc"]
font_size = 200

[node name="EndingStory" type="TextureRect"]
offset_left = -258.0
offset_top = -159.0
offset_right = 7301.0
offset_bottom = 7331.0
scale = Vector2(0.324548, 0.186754)
texture = ExtResource("1_p1hv4")
script = ExtResource("2_ob6i7")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 1191.98
offset_top = 1224.5
offset_right = 1231.98
offset_bottom = 1247.5
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 1168.3
offset_top = 2588.81
offset_right = 1907.3
offset_bottom = 3134.81
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label3" type="Label" parent="."]
layout_mode = 0
offset_left = 1148.56
offset_top = 3649.41
offset_right = 1887.56
offset_bottom = 4195.41
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label4" type="Label" parent="."]
layout_mode = 0
offset_left = 1148.56
offset_top = 5095.67
offset_right = 1887.56
offset_bottom = 5641.67
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TextureRect"]
offset_left = 1191.98
offset_top = 1224.5
offset_right = 1231.98
offset_bottom = 1247.5
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label2" type="Label" parent="TextureRect"]
offset_left = 1168.3
offset_top = 2588.81
offset_right = 1907.3
offset_bottom = 3134.81
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label3" type="Label" parent="TextureRect"]
offset_left = 1148.56
offset_top = 3649.41
offset_right = 1887.56
offset_bottom = 4195.41
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label4" type="Label" parent="TextureRect"]
offset_left = 1148.56
offset_top = 5095.67
offset_right = 1887.56
offset_bottom = 5641.67
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="TextureRect2" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TextureRect2"]
offset_left = 1191.98
offset_top = 1224.5
offset_right = 1231.98
offset_bottom = 1247.5
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label2" type="Label" parent="TextureRect2"]
offset_left = 1168.3
offset_top = 2588.81
offset_right = 1907.3
offset_bottom = 3134.81
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label3" type="Label" parent="TextureRect2"]
offset_left = 1148.56
offset_top = 3649.41
offset_right = 1887.56
offset_bottom = 4195.41
text = "test"
label_settings = SubResource("LabelSettings_boktc")

[node name="Label4" type="Label" parent="TextureRect2"]
offset_left = 1148.56
offset_top = 5095.67
offset_right = 1887.56
offset_bottom = 5641.67
text = "test"
label_settings = SubResource("LabelSettings_boktc")
